--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -616,7 +616,7 @@ User Section
   position: relative;
   @include breakpoint(small down) {
     font-size: 4vh;
-    margin-top: 1.5rem;
+    margin-top: 49%;
   }
 }
 
@@ -625,7 +625,7 @@ User Section
   text-align: center;
   color: black;
   font-weight: bold;
-  padding-bottom: 3%;
+  padding-bottom: 4%;
   @include breakpoint(small down) {
     font-size: 2.3vw;
   }
