--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1,4 +1,79 @@
 /*===============================================
+NAV WELCOME PAGE
+================================================*/
+.navLoginHeader{
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 3.3rem;
+  background-color: black;
+}
+
+.containerNavHeader{
+  width: 984px;
+  height: 100%;
+  @include horizontal-center; 
+}
+
+.contentNavHeader{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.logoBtn-navHeader{
+  display: inline-block;
+  margin-top: 0.8rem;
+  button{
+    margin: 0;
+  }
+}
+
+.logoNavHeader{
+  cursor: pointer;
+  background-image: url(<%= image_path 'orfheologoblanco_small.png' %>);
+  width: 77px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.container-loginNavHeader{
+  width: 17rem;
+  height: 13.5rem;
+  form{
+    margin: 0;
+    @include horizontal-center;
+    top: 2rem;
+    input{
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+.loginContainer{
+  position: absolute;
+  right: 0;
+  top: 0.4rem;
+  .menu{
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 0.5rem;
+  }
+  a.loginText{
+    color: white;
+  }
+  a.loginText:hover, .cliked{
+    color: $grey-2;
+  }
+  .signUp-welcomePage{
+    vertical-align: middle;
+    display: inline-block;
+  }
+}
+
+
+/*===============================================
 NEW WELCOME PAGE
 ================================================*/
 
@@ -61,6 +136,7 @@ NEW WELCOME PAGE
     /* font-size: $almostNormalSize; */
   }
 }
+
 
 .logo-welcomePage{
   cursor: pointer;
