--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -893,7 +893,13 @@ Profile Card
 }
 
 .circleProfile{
-  @include pardCircle(2rem);
+  /* @include pardCircle(2rem); */
+  height: 14.3%;
+  width: 18.84%;
+  border-radius: 50%;
+  webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
 }
 
 .position-circleProfile-card {
@@ -918,7 +924,7 @@ Profile Card
   margin-top: 13%;
   text-align:center;
   width:100%;
-  line-height: 1rem;
+  line-height: 100%;
   height: 15%;
   display: block;
 }
