--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -948,7 +948,7 @@ Profile Card
 }
 
 .hline-profileCard{
-  width: 150px;
+  width: 88%;
   margin: 0;
   margin-left: 10px;
   margin-top: 4% !important;
