--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1286,8 +1286,75 @@ a.footer-text-link:hover{
   margin-top: -1rem;
 }
 
+.logoOrfheo-contactInfo{
+  background-image: url(<%= image_path 'orfheologoblanco_small.png' %>);
+  width: 112px;
+  height: 35px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  @include horizontal-center;
+  position: relative;
+  margin: .3rem 0 1.2rem 0;
+}
 
+.header-contactInfo{
+  width: 100%;
+  height: 7rem;
+  background-color: $blue-pard;
+  position: relative;
+  padding: 1rem;
+}
 
+.menu-centered{
+  color: white;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  li{
+    margin: 0 1.5rem;
+    display: inline-block;
+    cursor: pointer;
+  }
+}
+
+.contactInfo-popup-bigalert{
+  width: 90vw;
+  max-width: 48rem !important;
+  padding: 0 !important;
+  color: $grey-4;
+  .close-button{
+    color: $grey-3;
+  }
+  .close-button:hover {
+    color: $grey-4;
+  }
+  h5{
+    text-align: center;
+    margin: 0.5rem 0 1rem 0;
+    font-weight: bold;
+  }
+}
+
+.tecnicalSupport-contactInfo, .colaboration-contactInfo, .services-contactInfo, .contact-contactInfo, .feedback-contactInfo{
+  padding: 1rem;
+  font-size: $almostNormalSize;
+  .half-col{
+    padding: 1rem;
+    width: 50%;
+    display: inline-block;
+    vertical-align: top;
+    button{
+      float:  right;
+      background: $green-pard;
+
+    }
+  }
+  input, textarea{
+    font-size: $almostNormalSize;
+    height: auto;
+    margin-bottom: 0.5rem;
+  }
+}
 
 
 /*==============================================
