--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -83,10 +83,15 @@ NAV WELCOME PAGE
   li{
     display: inline-block;
     text-transform: uppercase;
-    margin: 0 1.5rem;
+    margin: 0 1.2rem;
+    min-width: 90px;
+    text-align: center;
     a{
       color: white;
     }
+  }
+  .selected, li:hover{
+    font-weight: bold;
   }
 }
 
@@ -171,7 +176,7 @@ main.mainWelcomePage{
     margin: 0 0.7rem;
     opacity: 0.85;
     a{
-      font-size: 9px;
+      font-size: 8.9px;
       cursor: default;
     }
     .icon-profileCircle .material-icons{
@@ -192,7 +197,7 @@ main.mainWelcomePage{
       font-size: 20px;
     }
   }
-  .slick-slide.slick-active.slick-center {
+  .slick-slide.slick-center {
     width: 174px;
     height: 228px;
     margin: 0;
