--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -848,6 +848,12 @@ Profile Card
   }
 }
 
+.profileCard.profileCard-hoverInherit:hover{
+  box-shadow: 0px 1px 2px 1px;
+  color: inherit;
+}
+
+
 .profileCard:hover, .profileCard:focus {
     cursor:pointer; 
 } 
@@ -1303,6 +1309,7 @@ a.footer-text-link:hover{
   background-color: $blue-pard;
   position: relative;
   padding: 1rem;
+  border-radius: 0.125rem 0.125rem 0rem 0rem;
 }
 
 .menu-centered{
@@ -1311,9 +1318,14 @@ a.footer-text-link:hover{
   width: 100%;
   text-align: center;
   li{
-    margin: 0 1.5rem;
+    margin: 0 0.2rem;
     display: inline-block;
     cursor: pointer;
+    min-width: 122px;
+    text-align: center;
+  }
+  .selected, li:hover{
+    font-weight: bold;
   }
 }
 
@@ -1322,6 +1334,7 @@ a.footer-text-link:hover{
   max-width: 48rem !important;
   padding: 0 !important;
   color: $grey-4;
+  min-height: 39.3rem;
   .close-button{
     color: $grey-3;
   }
@@ -1338,6 +1351,7 @@ a.footer-text-link:hover{
 .tecnicalSupport-contactInfo, .colaboration-contactInfo, .services-contactInfo, .contact-contactInfo, .feedback-contactInfo{
   padding: 1rem;
   font-size: $almostNormalSize;
+  border-radius: 0.125rem 0.125rem 0rem 0rem;
   .half-col{
     padding: 1rem;
     width: 50%;
@@ -1347,6 +1361,14 @@ a.footer-text-link:hover{
       float:  right;
       background: $green-pard;
 
+    }
+  }
+  .list-col{
+    ul{
+      line-height: 1.2rem;
+      li{
+        margin-bottom: 0.5rem;
+      }
     }
   }
   input, textarea{
