--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -45,6 +45,10 @@ small:80% -> 12.8px / 0.8rem
 //   position:relative;
 //   } */
 
+.spinner{
+  position: fixed !important;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Chrome/Safari/Opera */
@@ -64,12 +68,13 @@ html, body{
 }
 
 body {
-  overflow: hidden !important;
+ /* overflow: hidden !important; */
 }
 
 
 html{
-  overflow: hidden;
+  overflow-x: hidden;
+  /* overflow-y: auto; */
 }
 
 main {
@@ -79,6 +84,10 @@ main {
   @include breakpoint(small down){
     padding-top:1.6rem;
   }
+}
+
+header, footer, main{
+  width: 100vw !important;
 }
 
 a, a:active, a:visited, a:hover {
@@ -95,8 +104,8 @@ a.profileCard:hover{
 } 
 
 .whole-container {
-    overflow-y: scroll;
-    overflow-x: hidden;
+/*     overflow-y: scroll;
+    overflow-x: hidden; */
     height: 100%;
     max-height: 100%;
     display: block;
@@ -121,6 +130,8 @@ a.profileCard:hover{
 .text-warning{
   color: red;
 }
+
+
 
 
 /*===============================================
@@ -1615,6 +1626,13 @@ select:-moz-focusring { color: transparent;
 POPUP
 ===============================================*/
 
+body.is-reveal-open{
+   overflow: visible;
+}
+
+.overflowHidden{
+  overflow: hidden !important;
+}
  
 .popup-header{
   margin-top: 0.5rem;
@@ -1628,6 +1646,10 @@ POPUP
 .full{
   background: rgba(0,0,0,0.6);
   overflow-x:hidden;
+  width: 100vw !important;
+  top: -100px !important;
+  position: fixed;
+  left: 0;
 }
 
 .popup-container-full,.alert-container-full{
