--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -11,7 +11,7 @@ $smallSize: 12px / 0.75 rem
 $verySmallSize: 9px / 0.56rem 
 $tinySize: 7px
 small:80% -> 12.8px / 0.8rem
-
+ 
  */ 
 /*  
 // html, body, div, span, applet, object, iframe,
@@ -994,8 +994,9 @@ Event Card
   height: 280px;
   box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.6);
   @include border-radius(5px);
+  border-left: 6px solid;
   .header-eventCard{
-    padding: 10px 10px 0 10px;
+    padding: 8px 12px 0 12px;
     position: relative;
     .baseline-eventCard{
       font-size: $almostNormalSize;
@@ -1004,12 +1005,12 @@ Event Card
       margin: 0;
     }
     .baseline-eventCard{
-      margin-bottom: 0.5rem;
+      margin-bottom: 9px;
     }
   }
   .imgContainer-eventCard{
-    margin-left: 10px;
-    margin-bottom: 8px;
+    margin-left: 12px;
+    margin-bottom: 9px;
     vertical-align: top;
     width: 122px;
     height: 172px;
@@ -1022,10 +1023,10 @@ Event Card
   }
   .info-eventCard{
     height: 172px;
-    margin-bottom: 8px;
+    margin-bottom: 9px;
     width: 334px;
     display: inline-block;
-    padding-left:10px;
+    padding-left:12px;
     font-size: $smallSize;
     line-height: 0.9rem;
     vertical-align: middle;
@@ -1057,7 +1058,7 @@ Event Card
   }
   .footer-eventCard{
     position: relative;
-    padding: 0 10px;
+    padding: 0 12px;
     font-size: $smallSize;
     line-height: 0.9rem;
     background: $grey-1;
@@ -1132,6 +1133,19 @@ Event Card
     }
   }
   margin: 1.5rem 0 3rem 0;
+}
+
+.outer-eventCard-container-welcomePage{
+  display: inline-block;
+  @include breakpoint(750px up){
+    position: relative;
+    height: 280px;
+    /* width: 100%; */
+  }
+  .eventCard-container-welcomePage{
+    display: inline-block;
+  }
+  margin: 1rem 0.9rem;
 }
 
 
