--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1831,6 +1831,11 @@ SEARCH // SELECT2
   padding-top: 5px;
 }
 
+li.select2-selection__choice{
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
 .search-input{
   @include breakpoint(large){ 
     width: 100%;
@@ -1841,6 +1846,8 @@ SEARCH // SELECT2
 
 input.select2-search__field{
   width: 100% !important;
+  margin-top: 6px !important;
+  margin-bottom: 6px !important;;
 }
 
 span.select2-container--default .select2-selection--single{
