--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -463,6 +463,11 @@ main.mainWelcomePage{
   color: rgba(0,0,0,.8);
 }
 
+.newsCard-welcomePage-container{
+  display: inline-block;
+  margin: 1rem 1.05rem;
+}
+
 /*===============================================
 WELCOME PAGE 2
 ================================================*/
