--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1178,6 +1178,47 @@ Event Card
   }
 }
 
+
+/*-----------------
+newsCard
+-------------------*/
+
+.newsCard{
+  width: 220px;
+  min-height: 300px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.imgContainer-newsCard{
+  width: 100%;
+  height: 135px;
+  /* background: $grey-2; */
+  /* border: 1px solid $grey-2; */
+}
+
+.infoContainer-newCard{
+  width: 100%;
+  min-height: 145px;
+  p{
+    margin: 0;
+  }
+  .title-newsCard{
+    margin-top: 0.4rem;
+    margin-bottom: 0.2rem;
+    max-height: 48px;
+  }
+  .text-newsCard{
+    font-size: $smallSize;
+    margin-bottom: 0.4rem;
+  }
+  .date-newsCard{
+    font-size: $smallSize;
+    color: $grey-4;
+    height: 20px;
+  }
+}
+
 /*-----------------
 Dropdown
 -------------------*/
@@ -1337,6 +1378,10 @@ a.footer-text-link:hover{
   position: relative;
   padding: 1rem;
   border-radius: 0.125rem 0.125rem 0rem 0rem;
+}
+
+.fullWidth{
+  width: 100vw !important;
 }
 
 .menu-centered{
