--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1185,38 +1185,65 @@ newsCard
 
 .newsCard{
   width: 220px;
-  min-height: 300px;
+  height: 258px;
   display: inline-block;
   vertical-align: top;
+  position: relative;
 }
 
 .imgContainer-newsCard{
   width: 100%;
   height: 135px;
+  cursor: pointer;
   /* background: $grey-2; */
   /* border: 1px solid $grey-2; */
 }
 
 .infoContainer-newCard{
   width: 100%;
-  min-height: 145px;
+  height: 92px;
+  margin-bottom: 0.3rem;
+  overflow: hidden;
+  position: relative;
   p{
     margin: 0;
   }
   .title-newsCard{
-    margin-top: 0.4rem;
+    padding-top: 0.5rem;
     margin-bottom: 0.2rem;
-    max-height: 48px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  .title-newsCard:hover{
+    text-decoration: underline;
   }
   .text-newsCard{
     font-size: $smallSize;
-    margin-bottom: 0.4rem;
+    /* height: 39px; */
   }
-  .date-newsCard{
-    font-size: $smallSize;
-    color: $grey-4;
-    height: 20px;
-  }
+}
+
+.dots-info-newsCard{
+  position: absolute;
+  top: 216px;
+  right: 0px;
+  color: $blue-pard;
+}
+
+.date-newsCard{
+  font-size: $smallSize;
+  color: $grey-4;
+  height: 20px;
+}
+
+.imagePopup-cardNews{
+  height: 363px;
+  margin-bottom: 1rem;
+}
+
+.title-popup-cardNews{
+  font-weight: bold;
+  margin-bottom: 1rem;
 }
 
 /*-----------------
