--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1201,7 +1201,7 @@ newsCard
 
 .infoContainer-newCard{
   width: 100%;
-  height: 92px;
+  height: 98px;
   margin-bottom: 0.3rem;
   overflow: hidden;
   position: relative;
@@ -1210,7 +1210,7 @@ newsCard
   }
   .title-newsCard{
     padding-top: 0.5rem;
-    margin-bottom: 0.2rem;
+    margin-bottom: 0.15rem;
     font-weight: bold;
     cursor: pointer;
   }
@@ -1244,6 +1244,10 @@ newsCard
 .title-popup-cardNews{
   font-weight: bold;
   margin-bottom: 1rem;
+}
+
+.popupDate-newsCard{
+  color: $grey-4;
 }
 
 /*-----------------
